--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/macos,jetbrains+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,jetbrains+all
 
@@ -44,6 +43,7 @@
 # .idea/modules
 # *.iml
 # *.ipr
+.idea
 
 # CMake
 cmake-build-*/
@@ -84,7 +84,7 @@ fabric.properties
 ### JetBrains+all Patch ###
 # Ignore everything but code style settings and run configurations
 # that are supposed to be shared within teams.
-.idea
+
 .idea/*
 
 !.idea/codeStyles
@@ -98,7 +98,6 @@ fabric.properties
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -121,10 +120,6 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,jetbrains+all
 
-*.iml
 .gradle
-/local.properties
-/build
-/captures
-.externalNativeBuild
-.cxx
+local.properties
+build
