--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.USDKDemo">
+    android:theme="@style/Theme.AppTheme">
     <activity
       android:name="com.awish.assistant.MainActivity"
       android:exported="true">
