--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,11 +61,15 @@ jobs:
       - name: Build release APK
         run: ./gradlew assembleRelease
 
+      - name: APK Rename
+        run: |
+          mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/Awish.Assistant_${{ env.VERSION_NAME }}.apk
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "app-release-v${{ env.VERSION_NAME }}"
-          path: "app/build/outputs/apk/release/app-release.apk"
+          name: "Awish.Assistant-${{ env.VERSION_NAME }}"
+          path: "app/build/outputs/apk/release/Awish.Assistant_${{ env.VERSION_NAME }}.apk"
           overwrite: true
           retention-days: 1
 
@@ -77,7 +81,7 @@ jobs:
         with:
           tag_name: v${{ env.VERSION_NAME }}
           name: Release v${{ env.VERSION_NAME }}
-          files: app/build/outputs/apk/release/app-release.apk
+          files: app/build/outputs/apk/release/Awish.Assistant_${{ env.VERSION_NAME }}.apk
           draft: false
           prerelease: false
 
